--- a/starter/requirements.txt
+++ b/starter/requirements.txt
@@ -1,10 +1,10 @@
 setuptools>=65.0.0
 wheel>=0.38.0
 
-numpy
-pandas
+numpy==1.23.5
+pandas==1.5.3
 scikit-learn==1.1.1
-joblib
+joblib==1.2.0
 
 fastapi==0.63.0
 uvicorn
